--- a/random_color_generator/index.html
+++ b/random_color_generator/index.html
@@ -16,22 +16,28 @@
         <div class="hex-color-container">
             <p class="hex-color-value">#fffff</p>
             <button class="hex-btn">create hex color</button>
+            <button class="hex-copy">copy to clipBoard</button>
         </div>
 
         <!-- rgb-color-container -->
         <div class="rgb-color-container">
+            <p class="rgb-color-value">rgb(255,123,234)</p>
+
             <div>
                 <label for="red">red</label>
-                <input type="range" min="0" max="100" value="0" id="red">
+                <input type="range" min="0" max="255" value="0" id="red">
             </div>
             <div>
                 <label for="green">green</label>
-                <input type="range" min="0" max="100" value="0" id="green">
+                <input type="range" min="0" max="255" value="0" id="green">
             </div>
             <div>
                 <label for="blue">blue</label>
-                <input type="range" min="0" max="100" value="0" id="blue">
+                <input type="range" min="0" max="255" value="0" id="blue">
             </div>
+            <button id="rgb-btn">Create RGB color</button>
+            <button class="rgb-copy">copy to clipBoard</button>
+
         </div>
     </div>
     <script src="main.js"></script>
